--- a/app/(pages)/about-us/page.module.scss
+++ b/app/(pages)/about-us/page.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
 }
 
-.page {
+.clinicRoles {
   display: flex;
   flex-direction: column;
   align-items: center;
